--- a/Grains/Base.lproj/LaunchScreen.storyboard
+++ b/Grains/Base.lproj/LaunchScreen.storyboard
@@ -15,20 +15,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="gKv-En-lTG">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launcScreen" translatesAutoresizingMaskIntoConstraints="NO" id="gKv-En-lTG">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="gKv-En-lTG" secondAttribute="height" multiplier="1:1" id="4wY-B0-Uml"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="200" id="96l-Uy-x3p"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="Q7p-8n-f14"/>
-                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="gKv-En-lTG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bga-Ok-P5C"/>
-                            <constraint firstItem="gKv-En-lTG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="egW-EJ-biL"/>
+                            <constraint firstAttribute="bottom" secondItem="gKv-En-lTG" secondAttribute="bottom" id="2IK-7l-9WK"/>
+                            <constraint firstItem="gKv-En-lTG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AfH-oW-aV7"/>
+                            <constraint firstItem="gKv-En-lTG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="AoE-dL-T1V"/>
+                            <constraint firstItem="gKv-En-lTG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="UF7-zH-DHH"/>
+                            <constraint firstItem="gKv-En-lTG" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="UHL-eM-exe"/>
+                            <constraint firstItem="gKv-En-lTG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zrZ-Ow-V88"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -39,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="414.5" height="414.5"/>
+        <image name="launcScreen" width="1080" height="1920"/>
     </resources>
 </document>
