--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -920,7 +920,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="vLR-gk-Brw"/>
+        <segue reference="ruM-Qa-UhP"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="7_1.jpg" width="439.55999755859375" height="781.20001220703125"/>
